--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "qrcoded7",
+    "name": "QRcode.D7",
     "slug": "qrcoded7",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -23,10 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      },
+      "package": "com.douglastx007.QRcode.D7"
     }
   }
 }
